# confluenpy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump-version.yml  coverage.yml  pylint.yml  release.yml  tag-and-release.yml  tag.yml  tests.yml
confluenpy/: content.py  markdown.py
tests/: conftest.py  test_confluence.py  test_content.py  test_markdown.py
tests/data/: Readme.md
